# WebRtspPlayer

./: CMakeLists.txt  README.md
scripts/: wasmenv.sh
src/: decoder.c  decoder.h  main.c
